# CMakeSeries

./: .gitignore  README.md  info.txt
Ep002/source/: CMakeLists.txt  main.cpp
Ep005/: CMakeLists.txt  main.cpp
Ep005/include/: dog.h  log.h  operation.h
Ep005/logger/src/: log.cpp
Ep005/src/: dog.cpp  operation.cpp
Ep008/: CMakeLists.txt
Ep008/src/: main.cpp
Ep008/src/math/: supermath.cpp
Ep009/: CMakeLists.txt
Ep009/src/math/: math.cmake
Ep009/src/stats/: stats.cmake  stats.cpp
Ep010/: CMakeLists.txt
Ep010/src/math/: CMakeLists.txt
Ep010/src/stats/: CMakeLists.txt
Ep010/src/stats/include/: stats.h
Ep022/: CMakeLists.txt  main.cpp
Ep022/cmake/: AddGoogleTest.cmake
Ep022/src/: CMakeLists.txt  calculator.cpp  calculator.h
Ep022/test/: CMakeLists.txt  test_calc.cpp
Ep029/: readme.txt
dll_import_export/: CMakeLists.txt  main.cpp  mylib.cpp
